--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.16.2",
         "fast-csv": "^2.4.1",
         "mongoose": "^5.3.3",
-        "mysql": "^2.16.0"
+        "mysql": "^2.16.0",
+        "lodash": ">=4.17.13"
     }
 }
